# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.680 2006/09/10 19:50:46 codeman Exp $

  10 Sep 2006; Preston Cody <codeman@gentoo.org>
  src/GLIGenDialog.py:
  rewrote how the USE flags work so that they are written correctly in relation
  to the system's USE flags.
  added a while condition on setting a user password
  
  10 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  properly identify apple_bootstrap partitions

  9 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  pay attention to 'ignoredparts' when reading partition table

  3 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  force conversion of 'mb' to long

  2 Sep 2006; Preston Cody <codeman@gentoo.org>
  Lots of internationalization fixes.  Point to a translation path called
  languages in the dialog directory.  Generated and added .pot files.
  Added gettext to GLIIP for package descriptions.

  01 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  src/GLIInstallProfile.py:
  Added some more applications to the Extra Packages list.

  1 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/ppcArchitectureTemplate.py:
  this doesn't need to inherit from x86AT or create an infinite loop by calling
  its own __init__()
  src/GLIArchitectureTemplate.py,src/templates/x86ArchitectureTemplate.py:
  move partitioning code to GLIAT

  31 Aug 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  pass quotes_around_value=False when adding default route to conf.d/net

  7 Aug 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  copy backup custom.conf from livecd if present

*GLI-0.4 (31 Jul 2006)

  31 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> bin/installer:
  Finally properly fixing the installer script. Thanks to Andrew Gaffney for