@@ -1,12 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.680 2006/09/10 19:50:46 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.681 2006/09/10 20:22:13 codeman Exp $
 
   10 Sep 2006; Preston Cody <codeman@gentoo.org>
   src/GLIGenDialog.py:
   rewrote how the USE flags work so that they are written correctly in relation
   to the system's USE flags.
   added a while condition on setting a user password
+  src/GLIArchitectureTemplate.py:
+  adding a self._mounted_devices to keep track of mounted partitions.
+  When cleaning up, only unmount these partitions.  Not yet tested.
   
   10 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
